tests/baselines/reference/reexportMissingDefault3.errors.txt
tests/cases/compiler/a.ts(2,10): error TS2305: Module '"./b"' has no exported member 'default'.


==== tests/cases/compiler/b.ts (0 errors) ====
    export const b = null;
    
==== tests/cases/compiler/a.ts (1 errors) ====
    export { b } from "./b";
    export { default as a } from "./b";
             ~~~~~~~
!!! error TS2305: Module '"./b"' has no exported member 'default'.